--- a/socialchatbackend/pom.xml
+++ b/socialchatbackend/pom.xml
@@ -63,6 +63,18 @@
     <version>11.2.0.3</version>
     <scope>test</scope>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.0.7.Final</version>
+		</dependency>
+  <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+<dependency>
+    <groupId>javax.validation</groupId>
+    <artifactId>validation-api</artifactId>
+    <version>2.0.1.Final</version>
+</dependency>
   
   
     <dependency>
